# knowledge_agent

./: .gitignore  README.md  main.py  pyproject.toml
agent_platform/: __init__.py  api.py  ask.py  community.py  entities.py  ingestor.py  loader.py  persistent_stores.py  propagation.py  review.py  sampler.py  schemas.py  stores.py  trace.py  worker.py
agent_platform/indexer/: __init__.py  fallback.py  go_parser.py  index.py  java_parser.py
agent_platform/llm/: __init__.py  ask_agent.py  ask_tools.py  client.py  community_prompts.py  config.py  prompts.py  tools.py  validators.py
agent_platform/trace_parsers/: __init__.py  anchors.py  join.py  parsers.yaml  registry.py
tests/: test_ask_agent.py  test_community.py  test_crystallize.py  test_entities.py  test_index_refresh.py  test_indexer.py  test_ingestor.py  test_llm_client.py  test_loader_worker_review_ask.py  test_normalize_trace_detail.py  test_persistent_stores.py  test_propagation.py  test_reinforcement.py  test_reject_feedback.py  test_sampler.py  test_trace_parsers.py
